<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context="com.apps.indiclass.ChangePasswordActivity">

    <!-- Password Label -->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/passwordr1Wrappero"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">

        <EditText
            android:id="@+id/passwordr1o"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/old_password"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>


    <!-- Password Label -->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/passwordr1Wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">

        <EditText
            android:id="@+id/passwordr1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_password"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>

    <!-- Password Label -->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/passwordr2Wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">

        <EditText
            android:id="@+id/passwordr2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/re_type_password"
            android:inputType="textPassword"
            android:imeOptions="actionDone" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/buttoncpass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_password"
        android:theme="@style/MyButtonBlue"/>
</LinearLayout>
