<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.apps.indiclass.MainActivity">

    <FrameLayout
        android:id="@+id/frame_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="?android:attr/windowBackground"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        android:visibility="gone"
        app:itemBackground="@color/colorPrimary"
        app:itemIconTint="@android:color/white"
        app:itemTextColor="@android:color/white"
        app:menu="@menu/navigation" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@color/colorPrimary"
            android:orientation="horizontal"
            android:visibility="gone">

            <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/bottom_navigation_container1"
                android:layout_width="match_parent"
                android:layout_height="@dimen/bottom_navigation_height"
                android:layout_weight="1"
                android:background="@drawable/item_bg"
                android:clickable="true"
                android:focusable="true"
                android:minWidth="@dimen/bottom_navigation_min_width"
                android:onClick="btClick"
                android:paddingLeft="@dimen/bottom_navigation_padding_left"
                android:paddingRight="@dimen/bottom_navigation_padding_right">

                <ImageView
                    android:id="@+id/bottom_navigation_item_icon1"
                    android:layout_width="@dimen/bottom_navigation_icon"
                    android:layout_height="@dimen/bottom_navigation_icon"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="@dimen/bottom_navigation_margin_bottom"
                    android:layout_marginTop="@dimen/bottom_navigation_margin_top_inactive"
                    android:gravity="center"
                    app:srcCompat="@drawable/ic_web_asset_black_24dp" />

                <TextView
                    android:id="@+id/bottom_navigation_item_title1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center_horizontal"
                    android:layout_marginBottom="@dimen/bottom_navigation_margin_bottom"
                    android:layout_marginTop="@dimen/bottom_navigation_margin_top_inactive"
                    android:gravity="center"
                    android:lines="1"
                    android:text="@string/title_dashboard"
                    android:textColor="@color/white"
                    android:textSize="@dimen/bottom_navigation_text_size_inactive" />

                <TextView
                    android:id="@+id/bottom_navigation_notification1"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/bottom_navigation_notification_height"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="@dimen/bottom_navigation_notification_margin_left"
                    android:layout_marginTop="@dimen/bottom_navigation_notification_margin_top_classic"
                    android:alpha="0"
                    android:background="@drawable/notification_background"
                    android:elevation="@dimen/bottom_navigation_notification_elevation"
                    android:gravity="center"
                    android:minWidth="@dimen/bottom_navigation_notification_width"
                    android:paddingLeft="@dimen/bottom_navigation_notification_padding"
                    android:paddingRight="@dimen/bottom_navigation_notification_padding"
                    android:textColor="#FFFFFF"
                    android:textSize="@dimen/bottom_navigation_notification_text_size"
                    android:textStyle="bold"
                    android:visibility="gone" />

            </FrameLayout>

            <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/bottom_navigation_container2"
                android:layout_width="match_parent"
                android:layout_height="@dimen/bottom_navigation_height"
                android:layout_weight="1"
                android:background="@drawable/item_bg"
                android:clickable="true"
                android:focusable="true"
                android:minWidth="@dimen/bottom_navigation_min_width"
                android:onClick="btClick"
                android:paddingLeft="@dimen/bottom_navigation_padding_left"
                android:paddingRight="@dimen/bottom_navigation_padding_right">

                <ImageView
                    android:id="@+id/bottom_navigation_item_icon2"
                    android:layout_width="@dimen/bottom_navigation_icon"
                    android:layout_height="@dimen/bottom_navigation_icon"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="@dimen/bottom_navigation_margin_bottom"
                    android:layout_marginTop="@dimen/bottom_navigation_margin_top_inactive"
                    android:gravity="center"
                    app:srcCompat="@drawable/ic_contacts_black_24dp" />

                <TextView
                    android:id="@+id/bottom_navigation_item_title2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center_horizontal"
                    android:layout_marginBottom="@dimen/bottom_navigation_margin_bottom"
                    android:layout_marginTop="@dimen/bottom_navigation_margin_top_inactive"
                    android:gravity="center"
                    android:lines="1"
                    android:text="@string/title_tutor"
                    android:textColor="@color/white"
                    android:textSize="@dimen/bottom_navigation_text_size_inactive" />

                <TextView
                    android:id="@+id/bottom_navigation_notification2"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/bottom_navigation_notification_height"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="@dimen/bottom_navigation_notification_margin_left"
                    android:layout_marginTop="@dimen/bottom_navigation_notification_margin_top_classic"
                    android:alpha="0"
                    android:background="@drawable/notification_background"
                    android:elevation="@dimen/bottom_navigation_notification_elevation"
                    android:gravity="center"
                    android:minWidth="@dimen/bottom_navigation_notification_width"
                    android:paddingLeft="@dimen/bottom_navigation_notification_padding"
                    android:paddingRight="@dimen/bottom_navigation_notification_padding"
                    android:textColor="#FFFFFF"
                    android:textSize="@dimen/bottom_navigation_notification_text_size"
                    android:textStyle="bold"
                    android:visibility="gone" />

            </FrameLayout>

            <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/bottom_navigation_container3"
                android:layout_width="match_parent"
                android:layout_height="@dimen/bottom_navigation_height"
                android:layout_weight="1"
                android:background="@drawable/item_bg"
                android:clickable="true"
                android:focusable="true"
                android:minWidth="@dimen/bottom_navigation_min_width"
                android:onClick="btClick"
                android:paddingLeft="@dimen/bottom_navigation_padding_left"
                android:paddingRight="@dimen/bottom_navigation_padding_right">

                <ImageView
                    android:id="@+id/bottom_navigation_item_icon3"
                    android:layout_width="@dimen/bottom_navigation_icon"
                    android:layout_height="@dimen/bottom_navigation_icon"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="@dimen/bottom_navigation_margin_bottom"
                    android:layout_marginTop="@dimen/bottom_navigation_margin_top_inactive"
                    android:gravity="center"
                    app:srcCompat="@drawable/ic_person_black_24dp" />

                <TextView
                    android:id="@+id/bottom_navigation_item_title3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center_horizontal"
                    android:layout_marginBottom="@dimen/bottom_navigation_margin_bottom"
                    android:layout_marginTop="@dimen/bottom_navigation_margin_top_inactive"
                    android:gravity="center"
                    android:lines="1"
                    android:text="@string/title_notifications"
                    android:textColor="@color/white"
                    android:textSize="@dimen/bottom_navigation_text_size_inactive" />

                <TextView
                    android:id="@+id/bottom_navigation_notification3"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/bottom_navigation_notification_height"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="@dimen/bottom_navigation_notification_margin_left"
                    android:layout_marginTop="@dimen/bottom_navigation_notification_margin_top_classic"
                    android:alpha="0"
                    android:background="@drawable/notification_background"
                    android:elevation="@dimen/bottom_navigation_notification_elevation"
                    android:gravity="center"
                    android:minWidth="@dimen/bottom_navigation_notification_width"
                    android:paddingLeft="@dimen/bottom_navigation_notification_padding"
                    android:paddingRight="@dimen/bottom_navigation_notification_padding"
                    android:textColor="#FFFFFF"
                    android:textSize="@dimen/bottom_navigation_notification_text_size"
                    android:textStyle="bold"
                    android:visibility="gone" />

            </FrameLayout>
        </LinearLayout>

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right|bottom"
        android:layout_marginBottom="88dp"
        android:visibility="gone"
        app:srcCompat="@drawable/ic_search_black_24dp"
        app:useCompatPadding="true" />

    <com.aurelhubert.ahbottomnavigation.AHBottomNavigation
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:visibility="visible" />
    <!--<LinearLayout-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_gravity="bottom|end"-->
    <!--android:gravity="center|end"-->
    <!--android:orientation="vertical"-->
    <!--android:layout_marginBottom="56dp">-->

    <!--<android.support.design.widget.FloatingActionButton-->
    <!--android:id="@+id/fab"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_margin="16dp"-->
    <!--app:srcCompat="@drawable/ic_search_black_24dp"-->
    <!--android:visibility="visible" />-->
    <!--</LinearLayout>-->
</android.support.design.widget.CoordinatorLayout>
